	PR target/42511 	* ifcvt.c (dead_or_predicable): Also remove REG_EQUAL note when 	note itself is not function_invariant_p.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155691 138bc75d-0d04-0410-961f-82ee72b054a4